<resources>
    <string name="app_name">Decal Jacket Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_show_sucursal">Mostrar Sucursales</string>
    <string name="action_add_sucursal">Agregar Sucursales</string>
    <string name="action_add_product">Agregar Productos</string>
    <string name="action_add_servicio">Agregar Servicios</string>


    <string name="menu_home">Home</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_sucursales">Sucursales</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>