<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemFavoritos"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/itemCompartir"
        android:icon="@drawable/ic_baseline_share_24"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/add_sucursal"
                android:orderInCategory="100"
                android:title="@string/action_add_sucursal"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/show_all"
                android:orderInCategory="100"
                android:title="@string/action_show_sucursal"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/add_product"
                android:orderInCategory="100"
                android:title="@string/action_add_product"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/add_servicio"
                android:orderInCategory="100"
                android:title="@string/action_add_servicio"
                app:showAsAction="ifRoom"
                />
        </menu>
    </item>
</menu>